create item card section functionality

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <button class="add-btn">+</button>
         </div>
         <div class="display-section">
-            <div class="item">
+            <!-- <div class="item">
                 <input type="text" name="" id="" class="input-item">
                 <button class="edit-btn">Edit</button>
                 <button class="remove-btn">Remove</button>
-            </div>
+            </div> -->
         </div>
     </main>
     <script src="script.js"></script>
